Add password reset

--- a/client-admin/src/app/modules/auth/pages/reset-password/reset-password.component.html
+++ b/client-admin/src/app/modules/auth/pages/reset-password/reset-password.component.html
@@ -1,1 +1,119 @@
-<p>reset-password works!</p>
+<div class="my-14">
+  <ng-container *ngIf="!hasCode; else resetPassword">
+    <ng-container *ngrxLet="recoverPasswordStatus$ as recoverPasswordStatus">
+      <div [ngSwitch]="recoverPasswordStatus" class="container mx-auto">
+        <div *ngSwitchDefault class="md:shadow-border max-w-lg mx-auto rounded overflow-hidden">
+          <div [ngClass]="recoverPasswordStatus === StoreStatus.LOADING ? 'visible' : 'invisible'">
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+          </div>
+          <div class="p-8">
+            <h2 class="mb-8 text-center text-4xl font-medium uppercase">Khôi phục mật khẩu</h2>
+            <form [formGroup]="recoverPasswordForm" (ngSubmit)="onRecoverPassword()" formAutofocus>
+              <mat-form-field appearance="outline" class="w-full">
+                <mat-label>Địa chỉ email</mat-label>
+                <input type="text" formControlName="email" matInput
+                  [disabledControl]="recoverPasswordStatus === StoreStatus.LOADING">
+                <mat-error *ngIf="recoverPasswordForm.controls.email.errors?.required; else invalidEmail">
+                  Địa chỉ email là <strong>bắt buộc</strong>
+                </mat-error>
+                <ng-template #invalidEmail>
+                  <mat-error *ngIf="recoverPasswordForm.controls.email.errors?.email">
+                    Địa chỉ email phải <strong>hợp lệ</strong>
+                  </mat-error>
+                </ng-template>
+              </mat-form-field>
+              <div class="my-4 flex">
+                <re-captcha class="m-auto" formControlName="reCaptcha"></re-captcha>
+              </div>
+              <div class="mt-2 flex">
+                <div>
+                  <a routerLink="/auth/sign-in" mat-button color="primary"
+                    [disabled]="recoverPasswordStatus === StoreStatus.LOADING">Đăng nhập</a>
+                </div>
+                <div class="ml-auto">
+                  <button type="submit" mat-flat-button color="primary"
+                    [disabled]="recoverPasswordStatus === StoreStatus.LOADING">Khôi phục bằng email</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div *ngSwitchCase="StoreStatus.SUCCESS" class="md:shadow-border max-w-lg mx-auto rounded overflow-hidden">
+          <div class="p-8 text-center">
+            <h2 class="text-4xl font-medium uppercase">Khôi phục mật khẩu</h2>
+            <p class="my-8 text-base">Đã gửi liên kết khôi phục mật khẩu vào email của bạn.</p>
+            <a class="w-full" routerLink="/home" mat-flat-button color="primary">Trang chủ</a>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+  </ng-container>
+  <ng-template #resetPassword>
+    <ng-container *ngrxLet="resetPasswordStatus$ as resetPasswordStatus">
+      <div [ngSwitch]="resetPasswordStatus" class="container mx-auto">
+        <div *ngSwitchDefault class="md:shadow-border max-w-lg mx-auto rounded overflow-hidden">
+          <div [ngClass]="resetPasswordStatus === StoreStatus.LOADING ? 'visible' : 'invisible'">
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+          </div>
+          <div class="p-8">
+            <h2 class="mb-8 text-center text-4xl font-medium uppercase">Khôi phục mật khẩu</h2>
+            <form [formGroup]="resetPasswordForm" (ngSubmit)="onResetPassword()" formAutofocus>
+              <mat-form-field appearance="outline" class="w-full">
+                <mat-label>Mật khẩu mới</mat-label>
+                <input [type]="hidePassword ? 'password' : 'text'" formControlName="password" matInput
+                  [disabledControl]="resetPasswordStatus === StoreStatus.LOADING">
+                <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword"
+                  [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword"
+                  [disabled]="resetPasswordStatus === StoreStatus.LOADING">
+                  <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+                <mat-error *ngIf="resetPasswordForm.controls.password.errors?.required; else passwordMinLength">
+                  Mật khẩu là <strong>bắt buộc</strong>
+                </mat-error>
+                <ng-template #passwordMinLength>
+                  <mat-error *ngIf="resetPasswordForm.controls.password.errors?.minlength; else passwordMaxLength">
+                    Mật khẩu phải <strong>ít nhất 8 kí tự</strong>
+                  </mat-error>
+                </ng-template>
+                <ng-template #passwordMaxLength>
+                  <mat-error *ngIf="resetPasswordForm.controls.password.errors?.maxlength; else passwordPattern">
+                    Mật khẩu <strong>không vượt quá 128 kí tự</strong>
+                  </mat-error>
+                </ng-template>
+                <ng-template #passwordPattern>
+                  <mat-error *ngIf="resetPasswordForm.controls.password.errors?.pattern">
+                    Mật khẩu phải <strong>chứa ít nhất một chữ hoa, một chữ thường và một số</strong>
+                  </mat-error>
+                </ng-template>
+              </mat-form-field>
+              <mat-form-field appearance="outline" class="w-full">
+                <mat-label>Xác nhận mật khẩu mới</mat-label>
+                <input [type]="hidePassword ? 'password' : 'text'" formControlName="confirmPassword" matInput
+                  [disabledControl]="resetPasswordStatus === StoreStatus.LOADING">
+                <mat-error *ngIf="resetPasswordForm.controls.confirmPassword.errors?.required; else passwordMatches">
+                  Xác nhận mật khẩu là <strong>bắt buộc</strong>
+                </mat-error>
+                <ng-template #passwordMatches>
+                  <mat-error *ngIf="resetPasswordForm.controls.confirmPassword.errors?.controlMatches">
+                    Mật khẩu phải <strong>trùng khớp</strong>
+                  </mat-error>
+                </ng-template>
+              </mat-form-field>
+              <div class="mt-2">
+                <button class="w-full" type="submit" mat-flat-button color="primary"
+                  [disabled]="resetPasswordStatus === StoreStatus.LOADING">Xác nhận</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div *ngSwitchCase="StoreStatus.SUCCESS" class="md:shadow-border max-w-lg mx-auto rounded overflow-hidden">
+          <div class="p-8 text-center">
+            <h2 class="text-4xl font-medium uppercase">Khôi phục mật khẩu thành công</h2>
+            <p class="my-8 text-base">Sử dụng mật khẩu mà bạn vừa đặt để tiếp tục đăng nhập.</p>
+            <a class="w-full" routerLink="/auth/sign-in" mat-flat-button color="primary">Đăng nhập</a>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+  </ng-template>
+</div>
