--- a/client-admin/src/app/modules/auth/pages/sign-in/sign-in.component.html
+++ b/client-admin/src/app/modules/auth/pages/sign-in/sign-in.component.html
@@ -35,7 +35,7 @@
               </mat-error>
             </mat-form-field>
             <div class="mt-2">
-              <a routerLink="/auth/recover-password" mat-button color="primary"
+              <a routerLink="/auth/reset-password" mat-button color="primary"
                 [disabled]="signInStatus === StoreStatus.LOADING">Khôi phục mật
                 khẩu</a>
             </div>
