Add basic admin page

--- a/src/app/modules/auth/pages/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/pages/sign-up/sign-up.component.html
@@ -134,13 +134,13 @@
           </form>
         </div>
       </div>
-      <div *ngSwitchCase="StoreStatus.SUCCESS" class="md:shadow-border max-w-lg mx-auto rounded overflow-hidden">
+      <!--div *ngSwitchCase="StoreStatus.SUCCESS" class="md:shadow-border max-w-lg mx-auto rounded overflow-hidden">
         <div class="p-8 text-center">
           <h2 class="text-4xl font-medium uppercase">Đăng ký thành công</h2>
           <p class="my-8 text-base">Vui lòng kiểm tra email của bạn để xác minh tài khoản.</p>
-          <a class="w-full" routerLink="/home" mat-flat-button color="primary">Trang chủ</a>
+          <a class="w-full" routerLink="/auth/sign-in" mat-flat-button color="primary">Đăng nhập</a>
         </div>
-      </div>
+      </div-->
     </div>
   </ng-container>
 </div>
