--- a/src/app/modules/admin/pages/categories/categories.component.html
+++ b/src/app/modules/admin/pages/categories/categories.component.html
@@ -1,1 +1,51 @@
-<p>categories works!</p>
+<div class="mx-4 my-4 px-4 py-4 shadow bg-white rounded">
+  <ng-container *ngIf="categoryDataSource">
+    <mat-form-field class="w-full md:w-auto">
+      <mat-label>Tìm kiếm</mat-label>
+      <input matInput #searchInput>
+    </mat-form-field>
+    <div class="overflow-x-auto">
+      <table class="w-full" mat-table [dataSource]="categoryDataSource" matSort matSortDisableClear="true"
+        [matSortActive]="defaultSort.active" [matSortDirection]="defaultSort.direction">
+        <ng-container matColumnDef="_id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+          <td mat-cell *matCellDef="let element">{{ element._id }}</td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên cấp 1</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
+        <ng-container matColumnDef="subName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên cấp 2</th>
+          <td mat-cell *matCellDef="let element">{{ element.subName }}</td>
+        </ng-container>
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày tạo</th>
+          <td mat-cell *matCellDef="let element">{{ (element.createdAt | date:'dd/MM/yyyy hh:mm:ss') || '' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="products">
+          <th mat-header-cell *matHeaderCellDef>Số lượng sản phẩm</th>
+          <td mat-cell *matCellDef="let element" class="capitalize">{{ element.products.length }}</td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Tùy chọn</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button [matMenuTriggerFor]="actionMenu" [matMenuTriggerData]="{element}">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+    <mat-paginator [length]="totalCategories || 0" [pageSize]="10" [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
+    <mat-menu #actionMenu="matMenu" xPosition="before">
+      <ng-template matMenuContent let-element="element">
+        <button [routerLink]="['view', element.id]" mat-menu-item>Xem chi tiết</button>
+        <button (click)="updateCategory(element)" [disabled]="!element.requestUpgrade" mat-menu-item>Cập nhật</button>
+        <button (click)="removeCategory(element)" [disabled]="!element.requestUpgrade" mat-menu-item>Xóa</button>
+      </ng-template>
+    </mat-menu>
+  </ng-container>
+</div>
