--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -1,1 +1,64 @@
-<p>users works!</p>
+<div class="mx-4 my-4 px-4 py-4 shadow bg-white rounded">
+  <ng-container *ngIf="userDataSource">
+    <div class="flex flex-wrap">
+      <mat-form-field class="w-full md:w-auto">
+        <mat-label>Tìm kiếm</mat-label>
+        <input matInput #searchInput>
+      </mat-form-field>
+      <mat-form-field class="w-full md:w-auto md:ml-auto">
+        <mat-label>Loại người dùng</mat-label>
+        <mat-select value="0">
+          <mat-option value="0">Tất cả</mat-option>
+          <mat-option value="1">Người dùng xin nâng cấp</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="overflow-x-auto">
+      <table class="w-full" mat-table [dataSource]="userDataSource" matSort matSortDisableClear="true"
+        [matSortActive]="defaultSort.active" [matSortDirection]="defaultSort.direction">
+        <ng-container matColumnDef="_id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+          <td mat-cell *matCellDef="let element">{{ element._id }}</td>
+        </ng-container>
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+          <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        </ng-container>
+        <ng-container matColumnDef="fullName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Họ tên</th>
+          <td mat-cell *matCellDef="let element">{{ element.fullName }}</td>
+        </ng-container>
+        <ng-container matColumnDef="birthdate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày sinh</th>
+          <td mat-cell *matCellDef="let element">{{ (element.birthdate | date:'dd/MM/yyyy') || '' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="role">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Vai trò</th>
+          <td mat-cell *matCellDef="let element" class="capitalize">{{ element.role }}</td>
+        </ng-container>
+        <ng-container matColumnDef="point">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Điểm</th>
+          <td mat-cell *matCellDef="let element">{{ element.point }}</td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Tùy chọn</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button [matMenuTriggerFor]="actionMenu" [matMenuTriggerData]="{element}">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+    <mat-paginator [length]="totalUsers || 0" [pageSize]="10" [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
+    <mat-menu #actionMenu="matMenu" xPosition="before">
+      <ng-template matMenuContent let-element="element">
+        <button [routerLink]="['view', element.id]" mat-menu-item>Xem thông tin</button>
+        <button (click)="upgradeUser(element)" [disabled]="!element.requestUpgrade" mat-menu-item>Nâng cấp</button>
+        <button (click)="downgradeUser(element)" [disabled]="element.role !== Role.SELLER" mat-menu-item>Hạ cấp</button>
+      </ng-template>
+    </mat-menu>
+  </ng-container>
+</div>
