--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -17,7 +17,7 @@
                 </p>
                 <div class="max-w-xs mx-auto sm:max-w-none sm:flex sm:justify-center">
                   <div class="space-y-4 md:space-y-0 md:space-x-2">
-                    <a mat-flat-button color="primary" class="w-full mb-4 sm:w-auto sm:mb-0" routerLink="/">Trang quản
+                    <a mat-flat-button color="primary" class="w-full mb-4 sm:w-auto sm:mb-0" routerLink="/admin">Trang quản
                       trị</a>
                     <a mat-flat-button class="w-full sm:w-auto sm:ml-4" routerLink="/">Tìm hiểu
                       thêm</a>
