--- a/src/app/shared/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/shared/layouts/admin-layout/admin-layout.component.html
@@ -5,7 +5,7 @@
   <mat-sidenav-container class="min-h-screen">
     <mat-sidenav #sideNav mode="side" opened>
       <mat-nav-list>
-        <a mat-list-item routerLink="/admin/users">
+        <a mat-list-item routerLink="/admin/users" focus>
           <mat-icon mat-list-icon>people</mat-icon>
           <div mat-line>Người dùng</div>
         </a>
