--- a/src/app/shared/layouts/app-layout/app-layout.component.html
+++ b/src/app/shared/layouts/app-layout/app-layout.component.html
@@ -1,1 +1,9 @@
-<router-outlet>
+<header>
+  <app-home-header></app-home-header>
+</header>
+<section>
+  <router-outlet></router-outlet>
+</section>
+<footer>
+  <app-home-footer></app-home-footer>
+</footer>
