--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,9 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import './assets/scss/material/custom';
+@import '~quill/dist/quill.core.css';
+@import '~quill/dist/quill.bubble.css';
+@import '~quill/dist/quill.snow.css';
 
 html, body {
   height: 100%;
